distribution/base/distribution-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: distribution-service
  namespace: distribution
spec:
  selector:
    app: distribution
  ports:
    - port: 5000
      targetPort: 5000
      name: distribution-registry
    - port: 5001
      targetPort: 5001
      name: distribution-debug
  type: LoadBalancer
  externalTrafficPolicy: Local
