distribution/base/distribution-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: distribution-ingress
  namespace: distribution
  annotations:
    nginx.ingress.kubernetes.io/app-root: /
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - registry.echobase.network
      secretName: distribution-prod-tls
  rules:
    - host: registry.echobase.network
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: distribution-service
                port:
                  number: 5000
